--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -4078,12 +4078,14 @@ li.ast-masthead-custom-menu-items .ast-search-icon .astra-search-icon {
   margin-right: -webkit-calc(-50vw  + 50%);
   margin-right: calc(-50vw  + 50%);
   max-width: 100vw;
+  width: 100vw;
 }
 
 .ast-no-sidebar .entry-content .alignwide {
   margin-left: -100px;
   margin-right: -100px;
   max-width: unset;
+  width: unset;
 }
 
 html {
