--- a/sass/site/primary/_gutenberg.scss
+++ b/sass/site/primary/_gutenberg.scss
@@ -6,12 +6,14 @@
 			margin-left: calc(-50vw  + 50% );
 			margin-right: calc(-50vw  + 50% );
 			max-width: 100vw;
+			width: 100vw;
 		}
 
 		.alignwide {
 			margin-left: -100px;
 			margin-right: -100px;
 			max-width: unset;
+			width: unset;
 		}
 
 	}
